feat(slack): implement slack callback
